--- a/Tema1_AccesoBDRelacionales/EjercicioFormularioFX/EstelaDeVega_EjercicioFormulario/src/main/resources/ui/Style.css
+++ b/Tema1_AccesoBDRelacionales/EjercicioFormularioFX/EstelaDeVega_EjercicioFormulario/src/main/resources/ui/Style.css
@@ -7,8 +7,45 @@
 }
 
 
+/****************************** POPUP COMBOBOX *****************************/
+.combo-box .list-cell {
+    -fx-text-fill: #000;
+} /* DEFINE EL COLOR DEL TEXTO DE LAS FILAS DEL COMBOBOX */
+
+.combo-box-popup .list-view .list-cell{
+    -fx-background-color:  #cc87e0;
+} /* DEFINE EL COLOR DE FONDO DEL POPUP DEL COMBOBOX */
+
+.combo-box-popup .list-view{
+    -fx-background-color:  #000;
+} /* DEFINE EL COLOR DEL MARCO DEL POPUP */
+
+.combo-box-popup .list-view .list-cell:filled:selected, .combo-box-popup .list-view .list-cell:filled:selected:hover{
+    -fx-background-color: #8656cb;
+} /* EFECTO PARA RESALTAR EL FONDO CUANDO UNA OPCION ESTE SELECCIONADA */
+
+.combo-box-popup .list-view .list-cell:filled:hover{
+    -fx-background-color: #781ddd;
+} /* EFECTO PARA CAMBIAR EL COLOR DE FONDO CUANDO EL MOUSE PASA POR ENCIMA DE UNA OPCION DEL COMBOBOX */
+
+.combo-box .scroll-bar {
+    -fx-background-color: white;
+} /* DEFINIR EL COLOR DEL FONDO DEL SCROLL DEL POPUP */
+
+.combo-box .scroll-bar .increment-button {
+    -fx-background-color: #781ddd;
+} /* DEFINIR EL COLOR DEL BOTON DEL UP SCROLL */
+
+.combo-box .scroll-bar .decrement-button {
+    -fx-background-color: #781ddd;
+}/* DEFINIR EL COLOR DEL BOTON DEL DOWN SCROLL */
+
+.combo-box .scroll-bar .thumb {
+    -fx-background-color: #781ddd;
+} /* DEFINIR EL COLOR DEL PROPIO BOTON DE SCROLL */
 
 
+/******************** TABLA ***********************************/
 .table-view {
     -fx-background-color:  #cc87e0; /* COLOR DEL FONDO DE LA TABLA */
     -fx-border-color:  #000;
