--- a/Tema1_AccesoBDRelacionales/EjercicioFormularioFX/EstelaDeVega_EjercicioFormulario/src/main/resources/ui/beginning.fxml
+++ b/Tema1_AccesoBDRelacionales/EjercicioFormularioFX/EstelaDeVega_EjercicioFormulario/src/main/resources/ui/beginning.fxml
@@ -8,50 +8,62 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="388.0" prefWidth="727.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.esteladevega_ejercicioformulario.Controller.BeginningCtrller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="388.0"
+            prefWidth="727.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.example.esteladevega_ejercicioformulario.Controller.BeginningCtrller">
     <children>
         <ImageView fitHeight="388.0" fitWidth="736.0" layoutX="-6.0" pickOnBounds="true">
             <image>
-                <Image url="@Imagen/backgroundApp.png" />
+                <Image url="@Imagen/backgroundApp.png"/>
             </image>
         </ImageView>
-        <ImageView fitHeight="77.0" fitWidth="174.0" layoutX="29.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="77.0" fitWidth="174.0" layoutX="29.0" layoutY="14.0" pickOnBounds="true"
+                   preserveRatio="true">
             <image>
-                <Image url="@Imagen/whiteStripes.png" />
+                <Image url="@Imagen/whiteStripes.png"/>
             </image>
         </ImageView>
-        <ImageView fitHeight="77.0" fitWidth="149.0" layoutX="555.0" layoutY="308.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="77.0" fitWidth="149.0" layoutX="555.0" layoutY="308.0" pickOnBounds="true"
+                   preserveRatio="true">
             <image>
-                <Image url="@Imagen/whiteStripesOthre.png" />
+                <Image url="@Imagen/whiteStripesOthre.png"/>
             </image>
         </ImageView>
-        <ImageView fitHeight="54.0" fitWidth="60.0" layoutX="638.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="54.0" fitWidth="60.0" layoutX="638.0" layoutY="20.0" pickOnBounds="true"
+                   preserveRatio="true">
             <image>
-                <Image url="@Imagen/cubeX_GalaxyLogo.png" />
+                <Image url="@Imagen/cubeX_GalaxyLogo.png"/>
             </image>
         </ImageView>
-        <Pane layoutX="318.0" layoutY="31.0" prefHeight="43.0" prefWidth="118.0" style="-fx-background-color: #ffffff; -fx-background-radius: 100;">
+        <Pane layoutX="318.0" layoutY="31.0" prefHeight="43.0" prefWidth="118.0"
+              style="-fx-background-color: #ffffff; -fx-background-radius: 100;">
             <children>
-                <ImageView fitHeight="40.0" fitWidth="63.0" layoutX="29.0" layoutY="2.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView fitHeight="40.0" fitWidth="63.0" layoutX="29.0" layoutY="2.0" pickOnBounds="true"
+                           preserveRatio="true">
                     <image>
-                        <Image url="@Imagen/cubeForm.jpg" />
+                        <Image url="@Imagen/cubeForm.jpg"/>
                     </image>
                 </ImageView>
             </children>
         </Pane>
-        <ImageView fitHeight="138.0" fitWidth="549.0" layoutX="104.0" layoutY="98.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="138.0" fitWidth="549.0" layoutX="104.0" layoutY="98.0" pickOnBounds="true"
+                   preserveRatio="true">
             <image>
-                <Image url="@Imagen/nameApp.png" />
+                <Image url="@Imagen/nameApp.png"/>
             </image>
         </ImageView>
-        <Text fill="WHITE" layoutX="219.0" layoutY="275.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Explore, Shop, Solve!">
+        <Text fill="WHITE" layoutX="219.0" layoutY="275.0" strokeType="OUTSIDE" strokeWidth="0.0"
+              text="Explore, Shop, Solve!">
             <font>
-                <Font name="Britannic Bold" size="34.0" />
+                <Font name="Britannic Bold" size="34.0"/>
             </font>
         </Text>
-        <Button fx:id="goBtt" layoutX="298.0" layoutY="308.0" mnemonicParsing="false" onAction="#onGoAction" prefHeight="43.0" prefWidth="157.0" style="-fx-border-color: BLACK; -fx-background-radius: 100; -fx-border-radius: 100; -fx-background-color: #8656cb; -fx-text-fill: black;" text="GO!">
+        <Button fx:id="goBtt" layoutX="298.0" layoutY="308.0" mnemonicParsing="false" onAction="#onGoAction"
+                prefHeight="43.0" prefWidth="157.0"
+                style="-fx-border-color: BLACK; -fx-background-radius: 100; -fx-border-radius: 100; -fx-background-color: #8656cb; -fx-text-fill: black;"
+                text="GO!">
             <font>
-                <Font name="Britannic Bold" size="23.0" />
+                <Font name="Britannic Bold" size="23.0"/>
             </font>
         </Button>
     </children>
