--- a/Tema3_AccesoBDNoSQL_MongoDB/PracticaMongoDB_GestionCoches/EstelaDeVega_EjercicioCrudGestionCoche/src/main/resources/ui/GestionCoche.fxml
+++ b/Tema3_AccesoBDNoSQL_MongoDB/PracticaMongoDB_GestionCoches/EstelaDeVega_EjercicioCrudGestionCoche/src/main/resources/ui/GestionCoche.fxml
@@ -1,16 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="org.esteladevega_ejerciciocrudgestioncoche.Controller.GestionCocheCtrller">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
+            prefWidth="600.0" xmlns="http://javafx.com/javafx/22" fx:controller="org.esteladevega_ejerciciocrudgestioncoche.Controller.GestionCocheCtrller"/>
