--- a/Tema3_AccesoBDNoSQL_MongoDB/PracticaMongoDB_GestionCoches/EstelaDeVega_EjercicioCrudGestionCoche/src/main/resources/ui/GestionCoche.fxml
+++ b/Tema3_AccesoBDNoSQL_MongoDB/PracticaMongoDB_GestionCoches/EstelaDeVega_EjercicioCrudGestionCoche/src/main/resources/ui/GestionCoche.fxml
@@ -1,7 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-            prefWidth="600.0" xmlns="http://javafx.com/javafx/22" fx:controller="org.esteladevega_ejerciciocrudgestioncoche.Controller.GestionCocheCtrller"/>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="511.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.esteladevega_ejerciciocrudgestioncoche.Controller.GestionCocheCtrller">
+    <children>
+        <Label layoutX="35.0" layoutY="48.0" text="Matricula">
+            <font>
+                <Font size="15.0" />
+            </font>
+        </Label>
+        <Label layoutX="35.0" layoutY="84.0" text="Marca">
+            <font>
+                <Font size="15.0" />
+            </font>
+        </Label>
+        <Label layoutX="35.0" layoutY="120.0" text="Modelo">
+            <font>
+                <Font size="15.0" />
+            </font>
+        </Label>
+        <Label layoutX="35.0" layoutY="159.0" text="Tipo">
+            <font>
+                <Font size="15.0" />
+            </font>
+        </Label>
+        <TextField fx:id="matriculaTxt" layoutX="128.0" layoutY="46.0" />
+        <TextField fx:id="marcaTxt" layoutX="128.0" layoutY="82.0" />
+        <TextField fx:id="modeloTxt" layoutX="128.0" layoutY="118.0" />
+        <ComboBox fx:id="tipoComboBox" layoutX="128.0" layoutY="157.0" prefHeight="25.0" prefWidth="169.0" />
+        <Button fx:id="nuevoBtt" layoutX="71.0" layoutY="218.0" mnemonicParsing="false" onAction="#onNuevoCocheAction" text="Nuevo" />
+        <Button fx:id="guardarBtt" layoutX="138.0" layoutY="218.0" mnemonicParsing="false" onAction="#onGuardarAction" text="Guardar" />
+        <Button fx:id="cancelarBtt" layoutX="213.0" layoutY="218.0" mnemonicParsing="false" onAction="#onCancelarAction" text="Cancelar" />
+        <Button layoutX="290.0" layoutY="218.0" mnemonicParsing="false" text="Modificar" />
+        <Button layoutX="373.0" layoutY="218.0" mnemonicParsing="false" text="Eliminar" />
+      <TableView fx:id="cochesTable" layoutX="28.0" layoutY="276.0" prefHeight="200.0" prefWidth="545.0" />
+      <Label layoutX="29.0" layoutY="484.0" text="Coches v5">
+         <font>
+            <Font size="15.0" />
+         </font>
+      </Label>
+    </children>
+</AnchorPane>
