--- a/Tema3_AccesoBDNoSQL_MongoDB/PracticaMongoDB_GestionCoches/EstelaDeVega_EjercicioCrudGestionCoche/src/main/resources/ui/GestionCoche.fxml
+++ b/Tema3_AccesoBDNoSQL_MongoDB/PracticaMongoDB_GestionCoches/EstelaDeVega_EjercicioCrudGestionCoche/src/main/resources/ui/GestionCoche.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -39,7 +40,13 @@
         <Button fx:id="cancelarBtt" layoutX="213.0" layoutY="218.0" mnemonicParsing="false" onAction="#onCancelarAction" text="Cancelar" />
         <Button fx:id="modificarBtt" layoutX="290.0" layoutY="218.0" mnemonicParsing="false" onAction="#onModificarAction" text="Modificar" />
         <Button fx:id="eliminarBtt" layoutX="373.0" layoutY="218.0" mnemonicParsing="false" onAction="#onEliminarAction" text="Eliminar" />
-      <TableView fx:id="cochesTable" layoutX="28.0" layoutY="276.0" prefHeight="200.0" prefWidth="545.0" />
+      <TableView fx:id="cochesTable" layoutX="28.0" layoutY="276.0" prefHeight="200.0" prefWidth="545.0">
+         <columns>
+            <TableColumn fx:id="matriculaCol" prefWidth="127.0" text="Matricula" />
+            <TableColumn fx:id="marcaCol" prefWidth="135.0" text="Marca" />
+            <TableColumn fx:id="modeloCol" prefWidth="147.0" text="Modelo" />
+            <TableColumn fx:id="tipoCol" prefWidth="135.0" text="Tipo" />
+         </columns></TableView>
       <Label layoutX="29.0" layoutY="484.0" text="Coches v5">
          <font>
             <Font size="15.0" />
